# Elastos.Trinity.Runtime

./: .appveyor.yml  .gitignore  .travis.yml  README.md  config.xml  package-lock.json  package.json
.script/: prepare_launcher.sh
config/permission/: app.json  group.json  intent.json
config/spv/: Config.cfg
hooks/after_prepare/: 005_download_3rdparty.js  010_merge_folders.js  020_apply_patches.js  020_apply_patches.sh  020_replace_text.js  030_modify_xcode_project.js  040_remove_files.js
hooks/after_prepare/patches/: 001_android_build_gradle.patch  002_android_manifest.patch  003_android_sources.patch  010_ios_cordova_lib.patch  011_ios_info_plist.patch  012_ios_qrscanner.patch  update_patches.js
platform_src/android/app/src/main/cpp/: CMakeLists.txt  ElaVerifier.cpp  ElaVerifier.h  native_verifier.cpp
plugin_src/AppManager/: .gitignore  README.md  apple-app-site-association  package.json  plugin.xml
plugin_src/AppManager/www/: AppManager.js  AppManager.ts  types.d.ts
samples/dapp_demos/org.elastos.trinity.demo.carrier/: demo.html  manifest.json
samples/dapp_demos/org.elastos.trinity.demo.did/: README.md  index.html  manifest.json
samples/dapp_demos/org.elastos.trinity.demo.hive/: index.html  manifest.json
samples/dapp_demos/org.elastos.trinity.demo1/: demo1.html  manifest.i18n  manifest.json
samples/dapp_demos/org.elastos.trinity.wallet/: index.html  manifest.json
samples/install-files/: demo3.epk  demo4.epk
samples/launcher_demo/: index.html  manifest.json
samples/launcher_demo/js/: index.js  loadJsCssFile.js
scripts/: apply_patches.js  download_3rdparty.js  hook_log.js  merge_folders.js  modify_xcode_project.js  remove_files.js
scripts/patches/: update_patches.js
www/launcher/: index.html
www/launcher/js/: index.js
www/launcher_demo/: index.html
www_files/config/: preferences.json
www_files/public/: test.js
(+168 files in other folders)
